# ridgeback

ridgeback_control/launch/: teleop.launch  turtle_teleop.launch
ridgeback_description/: package.xml
ridgeback_description/urdf/: accessories.urdf.xacro  ridgeback.gazebo  ridgeback.urdf.xacro  ridgeback_macro.urdf.xacro  ridgeback_parameters.urdf.xacro
ridgeback_description/urdf/accessories/: hokuyo_ust-10lx_mount.urdf.xacro
ridgeback_description/urdf/base/: base.urdf.xacro
ridgeback_description/urdf/markers/: marker.dae  marker_0.urdf.xacro  marker_0_parameters.urdf.xacro
ridgeback_description/urdf/rocker/: rocker.urdf.xacro
ridgeback_description/urdf/wheel/: wheel.urdf.xacro
