<?xml version="1.0"?>
<package>
  <name>ridgeback_description</name>
  <version>0.1.11</version>
  <description>URDF robot description for Ridgeback</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>lms1xx</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>aruco_gazebo</run_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>cri_efe_aruco</run_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
